--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "helmet": "^5.1.1",
     "joi": "^17.6.0",
     "logger": "^0.0.1",
+    "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   }
