--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
