--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fawn": "^2.1.5",
     "helmet": "^5.1.1",
     "joi": "^17.6.0",
+    "joi-objectid": "^4.0.2",
     "logger": "^0.0.1",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
