--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "config": "^3.3.7",
     "express": "^4.18.1",
@@ -18,6 +19,7 @@
     "helmet": "^5.1.1",
     "joi": "^17.6.0",
     "joi-objectid": "^4.0.2",
+    "lodash": "^4.17.21",
     "logger": "^0.0.1",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
