--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^5.1.1",
     "joi": "^17.6.0",
     "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "logger": "^0.0.1",
     "mongoose": "^6.5.2",
