--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.0",
     "config": "^3.3.7",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
     "helmet": "^5.1.1",
     "joi": "^17.6.0",
