--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +30,7 @@
     "winston-mongodb": "^5.1.0"
   },
   "devDependencies": {
+    "jest": "^29.1.2",
     "nodemon": "^2.0.19"
   }
 }
