--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon index.js",
-    "test": "NODE_ENV='development' && jest --watchAll --verbose --coverage"
+    "test": "NODE_ENV='development' && jest --watchAll --verbose",
+    "test:coverage": "NODE_ENV='development' && jest --watchAll --verbose --coverage"
   },
   "keywords": [],
   "author": "",
