--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "logger": "^0.0.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "pug": "^3.0.2",
